# octopus_game_engine

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/cuttlefish/: CMakeLists.txt
src/cuttlefish/src/: test.cc
src/cuttlefish/src/clicMode/: AttackMoveClicMode.cc  AttackMoveClicMode.hh  BuildClicMode.cc  BuildClicMode.hh  ClicMode.hh  Selection.hh  StandardClicMode.cc  StandardClicMode.hh
src/cuttlefish/src/cutscene/: Dialog.cc  Dialog.hh  DialogManager.cc  DialogManager.hh
src/cuttlefish/src/game/: GameLoop.cc  GameLoop.hh
src/cuttlefish/src/menu/: Menu.cc  Menu.hh
src/cuttlefish/src/minimap/: Minimap.cc  Minimap.hh
src/cuttlefish/src/panel/: DescPanel.cc  DescPanel.hh  DivinityPanel.cc  DivinityPanel.hh  OptionPanel.cc  OptionPanel.hh  Panel.cc  Panel.hh  ProductionPanel.cc  ProductionPanel.hh  ResourcesPanel.cc  ResourcesPanel.hh  StatsPanel.cc  StatsPanel.hh
src/cuttlefish/src/progressBar/: ProgressBar.cc  ProgressBar.hh
src/cuttlefish/src/sprite/: Picture.cc  Picture.hh  Sprite.cc  Sprite.hh  SpriteEntity.cc  SpriteEntity.hh  SpriteLibrary.cc  SpriteLibrary.hh
src/cuttlefish/src/text/: SegmentedText.cc  SegmentedText.hh  Text.cc  Text.hh  WrappedText.cc  WrappedText.hh
src/cuttlefish/src/texture/: LTexture.cc  LTexture.hh  RenderTexture.cc  RenderTexture.hh  Texture.cc  Texture.hh
src/cuttlefish/src/tilemap/: Tilemap.cc  Tilemap.hh
src/cuttlefish/src/window/: Window.cc  Window.hh
src/cuttlefish/src/world/: Selection.cc  Selection.hh  World.cc  World.hh  WorldUpdaterStepVisitor.cc  WorldUpdaterStepVisitor.hh
src/cuttlefish/test/: CMakeLists.txt
src/cuttlefish/test/src/: test.cc  test_command.cc  test_level1.cc  test_logical_center.cc  test_panel.cc  test_progress_bar.cc  test_wrapped_text.cc
src/fair_and_square/: CMakeLists.txt
src/fair_and_square/src/: DemoConstants.h
src/fair_and_square/src/core/: core.cc  fair_and_square_core.cc  test_level1.cc
src/fair_and_square/src/raw/: fair_and_square_raw.cc  raw.cc
src/game/: CMakeLists.txt  main.cc
src/game/cases/: Case2.cc
src/game/src/: main.cc
src/godoctopus/: CMakeLists.txt
src/godoctopus/src/: Controller.cpp  Controller.h  Entity.cpp  Entity.h  LevelModel.cpp  LevelModel.h  Model.cpp  Model.h  ModelUpgrade.cpp  ModelUpgrade.h  TooltipLoader.cpp  TooltipLoader.h  movement.cpp  movement.h  register_types.cpp  register_types.h
src/godoctopus/src/controller/: CommandController.cpp  CommandController.h  ControllerStepVisitor.cpp  ControllerStepVisitor.h
src/godoctopus/src/drawer/: Drawer.cpp  Drawer.h  MultiTextureDrawer.cpp  MultiTextureDrawer.h  StaticPropsDrawer.cpp  StaticPropsDrawer.h  TextureDrawer.cpp  TextureDrawer.h
src/godoctopus/src/editor/: GridBuild.cpp  GridBuild.h
src/godoctopus/src/file/: FileHeader.cpp  FileHeader.h
src/godoctopus/src/levels/: Level1.cpp  Level1.h  Level2.cpp  Level2.h  LevelTestAnchor.cpp  LevelTestAnchor.h  LevelTestModelLoader.cpp  LevelTestModelLoader.h
src/godoctopus/src/option/: Option.cpp  Option.h  OptionManager.cpp  OptionManager.h
src/godoctopus/src/production/: ProductionCommand.cpp  ProductionCommand.h
src/godoctopus/test/: CMakeLists.txt
src/godoctopus/test/src/: level2HeaderIO.test.cc
src/levels/: CMakeLists.txt
src/levels/src/cases/: Case1.cc  Case2.cc  Case3.cc  Case4.cc  Case5.cc  Cases.hh
src/octopus/: CMakeLists.txt  Generate.cmake
src/octopus/cmake_utils/: Generate.cmake
src/octopus/command/: Command.hh  EntityMoveCommand.cc  EntityMoveCommand.hh  EntityWaitCommand.cc  EntityWaitCommand.hh
src/octopus/entity/: Entity.cc  Entity.hh  EntityStep.hh
src/octopus/graph/: Graph.cc  GridNode.hh
src/octopus/src/command/: BuildingBlueprintCommand.hh  BuildingCommand.cc  BuildingCommand.hh  BuildingUnitProductionCommand.cc  BuildingUnitProductionCommand.hh  Command.cc  Command.hh  CommandData.hh  CommandHelpers.cc  CommandHelpers.hh  CommandQueue.cc  CommandQueue.hh  CommandVar.cc  CommandVar.hh  Commandable.cc  Commandable.hh  EntityAttackCommand.cc  EntityAttackCommand.hh  EntityAttackMoveCommand.cc  EntityAttackMoveCommand.hh  EntityBuffCommand.hh  EntityMoveCommand.cc  EntityMoveCommand.hh  EntityWaitCommand.cc  EntityWaitCommand.hh  UnitHarvestCommand.cc  UnitHarvestCommand.hh
src/octopus/src/controller/: Controller.cc  Controller.hh  Metrics.cc  Metrics.hh
src/octopus/src/graph/: CanonicalDijkstra.cc  CanonicalDijkstra.hh  Graph.cc  Graph.hh  Grid.cc  Grid.hh  GridNode.cc  GridNode.hh  PathManager.cc  PathManager.hh
src/octopus/src/logger/: Logger.cc  Logger.hh
src/octopus/src/orca/: OrcaManager.cc  OrcaManager.hh
src/octopus/src/serialization/: CommandSerialization.cc  CommandSerialization.hh  StateDump.cc  StateDump.hh
src/octopus/src/state/: DivinityType.hh  Handle.cc  Handle.hh  ResourceType.cc  ResourceType.hh  State.cc  State.hh
src/octopus/src/step/: ConflictPositionSolver.cc  ConflictPositionSolver.hh  ConstraintPosition.cc  ConstraintPosition.hh  Step.cc  Step.hh  StepAdditionVisitor.cc  StepAdditionVisitor.hh  Steppable.hh  TickingStep.cc  TickingStep.hh
src/octopus/src/utils/: Binary.cc  Binary.hh  Box.hh  ClonableWrapper.hh  DynamicBitset.cc  DynamicBitset.hh  Fixed.cc  Fixed.hh  FixedPoint.cc  FixedPoint.hh  KdTree.cc  KdTree.hh  RandomGen.hh  RandomGenerator.cc  RandomGenerator.hh  ThreadPool.cc  ThreadPool.hh  Vector.cc  Vector.hh  Version.cc.in  Version.hh
src/octopus/state/: Handle.hh
src/octopus/state/entity/: Entity.hh
src/octopus/step/: ConflictPositionSolver.cc  ConflictPositionSolver.hh  Step.cc  Step.hh
src/octopus/step/entity/: EntityStep.cc  EntityStep.hh
src/octopus/test/: CMakeLists.txt
src/octopus/test/src/: abilityEntity.test.cc  areaSpawnerCommand.test.cc  attackCommand.test.cc  attackCommandHeal.test.cc  attackMoveBuffCommand.test.cc  attackMoveCommand.test.cc  attackMoveHealCommand.test.cc  autoAttackChainingCommand.test.cc  autoAttackCommand.test.cc  autoBuffCommand.test.cc  autoHealCommand.test.cc  benchmark.test.cc  bitset.test.cc  buffCommand.test.cc  buffStep.test.cc  buildingCommand.test.cc  (+50 more)
src/octopus/utils/: Vector.cc  Vector.hh
(+445 files in other folders)
