# ============================================================================
# CMake configuration
# ============================================================================

cmake_minimum_required (VERSION 3.14.0)

# ============================================================================
# Game configuration
# ============================================================================

add_executable(game
	src/main.cc
)

target_link_libraries(game PRIVATE levels)
